<resources>
    <string name="app_name">Browser</string>
    <string name="input_hint">Searching...</string>
    <string name="forward_button">Forward</string>
    <string name="back_button">Back</string>
    <string name="setting_button">Setting</string>
    <string name="searching">Searching...</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="all_bookmarks">All Bookmarks</string>
    <string name="refresh_btn">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="view_all">View All</string>
</resources>