<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:background="#80FFFFFF">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/back_button"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forwardBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_forward_24"
            android:text="@string/forward_button"
            app:iconGravity="top"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bookmarkBtn"
            android:textSize="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_bookmark_border_24"
            android:text="@string/bookmark"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false"/>



    </LinearLayout>


</LinearLayout>